Fix some padding, add wrap-up slides

--- a/css/itmp.css
+++ b/css/itmp.css
@@ -10,6 +10,10 @@
 	list-style-type: lower-alpha;
 }
 
+.reveal ul + p {
+	padding-top: 0.6em;
+}
+
 .reveal li {
   padding-top: 0.3em;
 }
